Fix footer layout on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -135,6 +135,10 @@ b {
     width: 100%;
     flex-wrap: wrap;
 
+    @media (max-width: $mobile-width) {
+      flex-direction: column;
+    }
+
     &__contacts {
       height: 2.8em;
 
